@@ -1,0 +1,13 @@
+test-subject-D4 % Wed Oct 14 19:47:22 2020 % 200 % 117 % 100.0
+test-subject-D4 % Wed Oct 14 20:35:33 2020 % 59 % 35 % 100.0
+test-subject-D3 % Wed Oct 14 18:41:43 2020 % 23 % 12 % 100.0
+test-subject-D3 % Wed Oct 14 20:02:00 2020 % 15 % 7 % 100.0
+test-subject-D2 % Wed Oct 14 20:39:35 2020 % 10 % 7 % 100.0
+txt % Wed Oct 14 19:58:07 2020 % 1 % 1 % 100.0
+test-subject-D1 % Wed Oct 14 20:47:27 2020 % 347 % 71 % 97.19887955182072
+test-subject-D3 % Wed Oct 14 19:39:46 2020 % 31 % 18 % 96.875
+test-subject-D2 % Wed Oct 14 20:00:57 2020 % 27 % 15 % 96.42857142857143
+test-subject-D1 % Wed Oct 14 20:44:14 2020 % 57 % 27 % 81.42857142857143
+test-subject-D1 % Wed Oct 14 20:45:21 2020 % 122 % 17 % 80.26315789473685
+test-subject-D2 % Wed Oct 14 20:40:34 2020 % 38 % 34 % 55.88235294117647
+fictional-character % no time at all % 0 % 0 % 0.0
